kustomize/color/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /color/$2
spec:
  ingressClassName: nginx
  rules:
    - host: lrcsdp.support.cf-cd.com
      http:
        paths:
          - path: /color-dev/ #(/|$)(.*)
            backend:
              service:
                name: color
                port:
                  number: 80
            pathType: Prefix
